# app/Models/Cost.php
@@ -12,15 +12,10 @@ class Cost extends Model
     protected $table = 'costs';
 
     protected $fillable = [
-        'id_product',
         'description',
         'amount',
         'date',
     ];
 
-    // Определите отношение к модели Product
-    public function product()
-    {
-        return $this->belongsTo(Product::class, 'id_product', 'id');
-    }
+
 }
